[package]
name = "PasswordManagerV2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"          # TUI
crossterm = "0.27.0"    # terminal back-end
arboard = "3.2.0"       # copy text to clipboard
rpassword = "7.2.0"     # Password input library
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }     # SQLite database
dirs = "5.0.1"